--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -73,5 +74,7 @@ dependencies {
     //Hilt
     implementation "com.google.dagger:hilt-android:2.28.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
