--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RetrofitMVVM"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.DashboardActivity"></activity>
+        <activity android:name=".ui.DiscountActivity"></activity>
+        <activity android:name=".ui.DashboardActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
